--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 .navbar .navbar-brand {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: bold;
 
 }
@@ -54,7 +54,6 @@ p {
 .freshcart-template p {
     font-size: 18px;
 }
-
 
 .img-carrosel {
     max-width: 900px!important;
@@ -106,11 +105,17 @@ p {
     justify-content: center;
     gap: 20px;
     padding: 30px 0 30px 0;
+    align-items: center;
 }
 
 .div-im {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.div-im-um {
+    text-align: center;
 }
 
 .features {
