--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,14 @@ p {
 
 }
 
+.nav-texto { 
+    font-size: 15px!important;
+}
+
 .nav-item .botao-purchase {
     background-color: var(--ForestGreen);
     color: white;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 #nav-suporte {
